improvements and translations

--- a/OfficeBound.Presentation/Client/officebound/src/translations/translation-mk.json
+++ b/OfficeBound.Presentation/Client/officebound/src/translations/translation-mk.json
@@ -41,12 +41,31 @@
     "general.filters": "Филтри",
     "general.all": "Сите",
     "general.create.request": "Креирај барање",
+    "general.edit.request": "Промени барање",
     "general.not.found": "Не се пронајдени резултати",
     "general.status": "Статус",
     "general.description": "Опис",
     "general.request.date": "Датум на барање",
     "general.request.type": "Тип на барање",
     "general.actions": "Акции",
-    "general.total": "Вкупно"
-
+    "general.total": "Вкупно",
+    "department.add.new": "Отвори нов оддел",
+    "general.delete.warning": "Дали сте сигурни дека сакате да ја избришете селектираната ставка?",
+    "general.created.date": "Датум на креирање",
+    "departments.number.of.people": "Број на вработени",
+    "department.name": "Име на оддел",
+    "department.manager": "Менаџер",
+    "departments.create.new": "Креирај нов оддел",
+    "general.back": "Назад",
+    "validation.required": "Полето е задолжително",
+    "request.reject.reason": "Причина за откажување",
+    "request.description.placeholder": "Внесете опис на барањето",
+    "validation.request.date": "Можете да резервирате место, почнувајќи од утрешниот датум",
+    "request.type.desk": "Канцелариско биро",
+    "request.type.desk.with.parking": "Канцелариско биро со паркинг",
+    "request.type.conference.room": "Конференциска сала",
+    "request.type.conference.room.with.parking": "Конференциска сала со паркинг",
+    "request.available.desks": "Достапни бира",
+    "request.available.conference.rooms": "Достапни сали",
+    "request.available.parking": "Достапни паркинзи"
 }
