improvements after testing

--- a/OfficeBound.Presentation/Client/officebound/src/translations/translation-mk.json
+++ b/OfficeBound.Presentation/Client/officebound/src/translations/translation-mk.json
@@ -25,7 +25,7 @@
     "validation.confirm.password.required": "Ве молиме, потврдете ја внесената лозинка",
     "validation.minlengh": "Минималната должина е 6 карактери",
     "general.confirm.password.description": "Потврдете ја Вашата лозинка",
-    "auth.create.account.description": "Внесете податоци за регистрација во системот. Вашиот профил ќе биде активиран од Администратор по преглед Вашите податоци.",
+    "auth.create.account.description": "Внесете податоци за регистрација во системот. Вашиот профил ќе биде активиран од Администратор по преглед на Вашите податоци.",
     "auth.login.description": "Внесете ги Вашите податоци за пристап до Вашиот работен профил",
     "footer.description": "Дигитализирајте го Вашиот канцелариски простор со нашата модерна и интуитивна платформа.",
     "footer.help.center": "Центар за помош",
@@ -48,7 +48,7 @@
     "general.request.date": "Датум на барање",
     "general.request.type": "Тип на барање",
     "general.actions": "Акции",
-    "general.total": "Вкупно",
+    "general.total": "Вкупен број на барања",
     "department.add.new": "Отвори нов оддел",
     "general.delete.warning": "Дали сте сигурни дека сакате да ја избришете селектираната ставка?",
     "general.created.date": "Датум на креирање",
@@ -56,6 +56,7 @@
     "department.name": "Име на оддел",
     "department.manager": "Менаџер",
     "departments.create.new": "Креирај нов оддел",
+    "departments.update": "Промени оддел",
     "general.back": "Назад",
     "validation.required": "Полето е задолжително",
     "request.reject.reason": "Причина за откажување",
@@ -65,7 +66,33 @@
     "request.type.desk.with.parking": "Канцелариско биро со паркинг",
     "request.type.conference.room": "Конференциска сала",
     "request.type.conference.room.with.parking": "Конференциска сала со паркинг",
-    "request.available.desks": "Достапни бира",
-    "request.available.conference.rooms": "Достапни сали",
-    "request.available.parking": "Достапни паркинзи"
+    "request.available.desks": "Достапни бироа",
+    "request.available.conference.rooms": "Достапни конференциски сали",
+    "request.available.parking": "Достапни паркинзи",
+    "departments.name.placeholder": "Внесете име на оддел",
+    "department.created.date": "Креирано на: ",
+    "department.name.edit.restriction": "Доколку е променето името на одделот, Ве молиме отворете нов оддел!",
+    "requests.reject": "Откажи барање",
+    "requests.rejection.reason": "Причина за откажување",
+    "user.delete.confirmation": "Дали сте сигурни дека сакате корисникот {{username}} да биде отстранет од системот?",
+    "user.remove": "Отстрани корисник",
+    "user.rejection.reason": "Причина за отстранување од системот",
+    "validation.rejection.reason.min.length": "Ве замолуваме, опишете ја причината за отстранување со најмалку 50 карактери.",
+    "general.yes": "Да",
+    "general.no": "Не",
+    "general.approve": "Одобри",
+    "general.reject": "Откажи",
+    "general.approved": "Одобрено",
+    "general.rejected": "Откажано",
+    "general.pending": "Се процесира",
+    "users.position": "Работна позиција",
+    "users.account.approved": "Профилот е успешно додаден во системот",
+    "user.set.as.branch.manager": "Постави регионален менаџер",
+    "request.preview": "Преглед на барање",
+    "request.created.by.user": "Креирано од Корисник",
+    "request.status.cancelled.by.user": "Откажано од корисникот",
+    "requests.cancel": "Откажи барање",
+    "requests.cancellation.reason": "Причина за откажување",
+    "validation.cancellation.reason.required": "Ве молиме, внесете причина за откажување",
+    "requests.cancel.error": "Грешка при откажување на барањето"
 }
